--- a/package.json
+++ b/package.json
@@ -28,15 +28,15 @@
     "node": ">= 0.4.0"
   },
   "devDependencies": {
-    "benchmark": "^2.1.2",
-    "chalk": "^1.1.3",
-    "grunt": "^0.4.5",
-    "grunt-bump": "^0.3.0",
-    "grunt-contrib-uglify": "~0.5.0",
+    "benchmark": "2.1.4",
+    "chalk": "2.4.2",
+    "grunt": "1.0.4",
+    "grunt-bump": "0.8.0",
+    "grunt-contrib-uglify": "4.0.1",
     "jasmine": "^2.5.1",
-    "jsdom": "^9.5.0",
-    "jsonfile": "^2.3.1",
-    "underscore": "^1.8.3"
+    "jsdom": "15.1.1",
+    "jsonfile": "5.0.0",
+    "underscore": "1.9.1"
   },
   "scripts": {
     "tsc": "tsc",
